--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Ostliis creates innovative, user‑centric solutions that transform ideas into reality. Sign up to learn about our upcoming products and be first in line for early access." />
   <title>Ostliis | Transforming Ideas into Reality</title>
 
   <!-- Google Font -->
@@ -80,7 +81,40 @@
       font-size: 1rem;
       cursor: pointer;
       transition: 0.3s;
+  
+        /* Early Access */
+    .early-access {
+      background: #e6dcc6;
+      padding: 60px 20px;
     }
+    .early-access form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      max-width: 500px;
+      margin: auto;
+    }
+    .early-access input,
+    .early-access select {
+      padding: 12px;
+      border: 1px solid #d1d5db;
+      border-radius: 4px;
+      font-size: 1rem;
+    }
+    .early-access button {
+      background: #394b3a;
+      color: #fff;
+      padding: 12px;
+      border: none;
+      border-radius: 4px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .early-access button:hover {
+      background: #2c3c2c;
+    }
+}
     .contact button:hover { background: #4338ca; }
 
     /* Footer */
@@ -100,6 +134,25 @@
     <p>Transforming ideas into reality with cutting‑edge solutions.</p>
     <a href="#contact" class="btn">Get Started</a>
   </header>
+  <!-- Early Access Sign-Up Section -->
+  <section id="early-access" class="early-access">
+    <h2 style="text-align:center;margin-bottom:20px;">Stay in the Loop</h2>
+    <p style="text-align:center;margin-bottom:40px;">Sign up to learn about new products coming soon.</p>
+    <form onsubmit="event.preventDefault(); alert('Thanks! You\'re on the list.'); this.reset();">
+      <input type="text" placeholder="Name" required />
+      <input type="email" placeholder="Email" required />
+      <input type="text" placeholder="City" />
+      <select>
+        <option value="" disabled selected>Role</option>
+        <option>Customer</option>
+        <option>Investor</option>
+        <option>Partner</option>
+        <option>Other</option>
+      </select>
+      <button type="submit">Let Me In Early</button>
+    </form>
+  </section>
+
 
   <!-- Features Section -->
   <section id="features">
