--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <section id="early-access" class="early-access">
     <h2 style="text-align:center;margin-bottom:20px;">Stay in the Loop</h2>
     <p style="text-align:center;margin-bottom:40px;">Sign up to learn about new products coming soon.</p>
-    <form onsubmit="event.preventDefault(); alert('Thanks! You\'re on the list.'); this.reset();">
+<form action="https://formsubmit.co/evanpaulnavarro@outlook.com" method="POST">
       <input type="text" placeholder="Name" required />
       <input type="email" placeholder="Email" required />
       <input type="text" placeholder="City" />
@@ -150,7 +150,8 @@
         <option>Other</option>
       </select>
       <button type="submit">Let Me In Early</button>
-    </form>
+
+      <input type="hidden" name="_captcha" value="false" /></form>
   </section>
 
 
