--- a/index.html
+++ b/index.html
@@ -31,9 +31,45 @@
 
     a {
       color: var(--ink);
-      text-decoration: none;
+      text-decorati
+        on: none;
       font-weight: 600;
     }
+
+/* Navbar */
+.navbar {
+  background: var(--sand);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+}
+
+.navbar .container {
+  max-width: 1100px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.75rem 1rem;
+}
+
+.logo {
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: var(--ink);
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 1.5rem;
+}
+
+.nav-links a {
+  color: var(--ink);
+  font-weight: 600;
+}
 
     /* Hero */
     .hero {
@@ -155,9 +191,20 @@
   </style>
 </head>
 <body>
-  <!-- Hero -->
+  <!-- Navigation -->
+    <nav class="navbar">
+    <div class="container">
+      <a href="#" class="logo">Ostlii</a>
+      <ul class="nav-links">
+        <li><a href="#features">Features</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Waitlist</a></li>
+      </ul>
+    </div>
+  </nav>
+
   <section class="hero">
-    <h1>No Ads. No Tracking.<br>Just People, Presence & Purpose.</h1>
+    <hNo ads. No tracking.<br>Just people, presence, and purpose.
     <p>Ostlii is the human‑first discovery network that lets you find and share real‑world experiences without sacrificing your privacy or your data.</p>
     <a href="#contact" class="btn-primary">Join the Waitlist</a>
   </section>
