Add mesh network & agentic tool feature cards

--- a/landing.html
+++ b/landing.html
@@ -281,6 +281,23 @@ textarea:focus {
       <h3>Human‑Centric AI</h3>
       <p>AI that augments human connection—never manipulates it. Built with transparency and ethics at the core.</p>
     </div>
+    <div class="feature">
+    <h3>Ekho Spots &amp; Signals</h3>
+    <p>Tap into our mesh network to broadcast and discover hyper‑local moments in real time.</p>
+  </div>
+  <div class="feature">
+    <h3>Agentic Business Tools</h3>
+    <p>Give local businesses autonomous, privacy‑respecting ways to engage nearby customers.</p>
+  </div>
+  <div class="feature">
+    <h3>Digital Pathway to IRL</h3>
+    <p>Turn online intent into offline action with seamless directions and meet‑up prompts.</p>
+  </div>
+  <div class="feature">
+    <h3>Intention‑Based Matching</h3>
+    <p>Connect with people and places that align with what <em>you</em> choose to share—nothing more.</p>
+  </div>
+
   </section>
 
   <!-- About & Values -->
