--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
     :root {
       --green: #95b07f;
@@ -23,14 +24,14 @@
     }
 
     body {
-      font-family: "Inter", sans-serif;
+      font-family: ""Space Grotesk", "Inter"", sans-serif;
       line-height: 1.6;
       color: var(--ink);
       background: var(--white);
     }
 
     header {
-      background: linear-gradient(135deg, var(--green) 0%, var(--sand) 100%);
+      background: linear-linear-gradient(135deg, var(--green) 0%, var(--gold) 50%, var(--sand) 100%)
       color: var(--ink);
       padding: 4rem 1rem 6rem;
       text-align: center;
