--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap" rel="stylesheet" />
+  <meta name="description" content="Ostlii is a strategic AI agency &amp; ecosystem operator building ethical, local‑first AI infrastructure and tools." />
+<meta property="og:title" content="Ostlii – Strategic AI Agency & Ecosystem Operator" />
+<meta property="og:description" content="Custom AI agents, startup acquisition, investor matchmaking, and more. Join the Ostlii ecosystem." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://ostlii.com" />
+<meta property="og:image" content="https://ostlii.com/under-construction.png" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Ostlii – Strategic AI Agency & Ecosystem Operator" />
+<meta name="twitter:description" content="Custom AI agents, startup acquisition, investor matchmaking, and more. Join the Ostlii ecosystem." />
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
     :root {
