--- a/index.html
+++ b/index.html
@@ -112,6 +112,62 @@
 .main-nav a:hover {
   color: var(--gold);
 }
+    
+/* Hamburger */
+.nav-toggle {
+  display: none;
+}
+
+.hamburger {
+  display: none;
+  width: 30px;
+  height: 22px;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.hamburger span,
+.hamburger span::before,
+.hamburger span::after {
+  content: '';
+  display: block;
+  height: 3px;
+  background: var(--ink);
+  border-radius: 2px;
+}
+
+.hamburger span::before,
+.hamburger span::after {
+  content: '';
+  display: block;
+}
+
+.hamburger span::before {
+  transform: translateY(-8px);
+}
+.hamburger span::after {
+  transform: translateY(5px);
+}
+
+@media (max-width: 700px) {
+  .hamburger {
+    display: flex;
+  }
+  .main-nav {
+    display: none;
+    flex-direction: column;
+    gap: 1rem;
+    background: var(--white);
+    padding: 1rem;
+    border: 1px solid var(--sand);
+    border-radius: 6px;
+  }
+  #nav-toggle:checked + .hamburger + .main-nav {
+    display: flex;
+  }
+}
+
 
     section {
       padding: 4rem 1rem;
@@ -206,6 +262,9 @@
 </head>
 <body>
   <heade
+      <input type="checkbox" id="nav-toggle" class="nav-toggle">
+  <label for="nav-toggle" class="hamburger"><span></span></label>
+
       <nav class="main-nav">
     <ul>
       <li><a href="#offerings">Offerings</a></li>
