Add Terms of Service link to footer

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ r>
 
   <footer>
     <p>&copy; 2025 Ostlii. All rights reserved.</p>
-    <a href="#" onclick="document.getElementById('privacyModal').style.display='flex';return false;" style="color:var(--gold);text-decoration:none;">How We Handle Your Data</a>
+    <a href="#" onclick="document.getElementById('privacyModal').style.display='flex';return false;" style="color:var(--gold);text-decoration:none;">How We Handle Your Data</a> &nbsp;|&nbsp; <a href="terms.html" style="color:var(--green);text-decoration:none;">Terms of Service</a>
   </footer>
 
   <!-- Privacy Modal -->
