--- a/index.html
+++ b/index.html
@@ -1,379 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ostlii – Strategic AI Agency & Ecosystem Operator</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap" rel="stylesheet" />
-  <meta name="description" content="Ostlii is a strategic AI agency &amp; ecosystem operator building ethical, local‑first AI infrastructure and tools." />
-<meta property="og:title" content="Ostlii – Strategic AI Agency & Ecosystem Operator" />
-<meta property="og:description" content="Custom AI agents, startup acquisition, investor matchmaking, and more. Join the Ostlii ecosystem." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://ostlii.com" />
-<meta property="og:image" content="https://ostlii.com/under-construction.png" />
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Ostlii – Strategic AI Agency & Ecosystem Operator" />
-<meta name="twitter:description" content="Custom AI agents, startup acquisition, investor matchmaking, and more. Join the Ostlii ecosystem." />
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ostlii – Under Construction</title>
   <style>
-    :root {
-      --green: #95b07f;
-      --ink: #303332;
-      --sand: #f3f3d3;
-      --gold: #c6a664;
-      --white: #ffffff;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
-      font-family: ""Space Grotesk", "Inter"", sans-serif;
-      line-height: 1.6;
-      color: var(--ink);
-      background: var(--white);
-    }
-
-    header {
-      background: linear-linear-gradient(135deg, var(--green) 0%, var(--gold) 50%, var(--sand) 100%)
-      color: var(--ink);
-      padding: 4rem 1rem 6rem;
-      text-align: center;
-      position: relative;
-      overflow: hidden;
-    }
-
-    header h1 {
-      font-size: clamp(2rem, 5vw, 3.5rem);
-      font-weight: 900;
-      margin-bottom: 1rem;
-    }
-
-    header p {
-      font-size: clamp(1rem, 2vw, 1.25rem);
-      max-width: 60ch;
-      margin: 0 auto 2rem;
-    }
-
-    .cta-group {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
-    }
-
-    .btn {
-      padding: 0.75rem 1.5rem;
-      border-radius: 6px;
-      font-weight: 600;
-      text-decoration: none;
-      transition: 0.25s ease;
-    }
-
-    .btn-primary {
-      background: var(--ink);
-      color: var(--white);
-    }
-    .btn-primary:hover {
-      background: var(--gold);
-      color: var(--ink);
-    }
-
-    .btn-outline {
-      border: 2px solid var(--ink);
-      color: var(--ink);
-    }
-    .btn-outline:hover {
-      background: var(--ink);
-      color: var(--white);
-    }
-
-/* Navigation */
-.main-nav {
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-  margin-bottom: 2rem;
-  flex-wrap: wrap;
-}
-
-.main-nav a {
-  color: var(--ink);
-  font-weight: 600;
-  text-decoration: none;
-  transition: color 0.2s ease;
-}
-
-.main-nav a:hover {
-  color: var(--gold);
-}
-    
-/* Hamburger */
-.nav-toggle {
-  display: none;
-}
-
-.hamburger {
-  display: none;
-  width: 30px;
-  height: 22px;
-  flex-direction: column;
-  justify-content: space-between;
-  cursor: pointer;
-}
-
-.hamburger span,
-.hamburger span::before,
-.hamburger span::after {
-  content: '';
-  display: block;
-  height: 3px;
-  background: var(--ink);
-  border-radius: 2px;
-}
-
-.hamburger span::before,
-.hamburger span::after {
-  content: '';
-  display: block;
-}
-
-.hamburger span::before {
-  transform: translateY(-8px);
-}
-.hamburger span::after {
-  transform: translateY(5px);
-}
-
-@media (max-width: 700px) {
-  .hamburger {
-    display: flex;
-  }
-  .main-nav {
-    display: none;
-    flex-direction: column;
-    gap: 1rem;
-    background: var(--white);
-    padding: 1rem;
-    border: 1px solid var(--sand);
-    border-radius: 6px;
-  }
-  #nav-toggle:checked + .hamburger + .main-nav {
-    display: flex;
-  }
-}
-
-
-    section {
-      padding: 4rem 1rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    section h2 {
-      font-size: 2rem;
-      margin-bottom: 1.5rem;
-      text-align: center;
-    }
-
-    .grid {
-      display: grid;
-      gap: 2rem;
-    }
-
-    @media (min-width: 700px) {
-      .grid-3 {
-        grid-template-columns: repeat(3, 1fr);
-      }
-      .grid-2 {
-        grid-template-columns: repeat(2, 1fr);
-      }
-    }
-
-    .card {
-      background: var(--white);
-      border: 1px solid var(--sand);
-      border-radius: 8px;
-      padding: 2rem;
-      position: relative;
-      transition: transform 0.25s ease;
-    }
-    .card:hover {
-      transform: translateY(-6px);
-    }
-
-    .stealth .details {
-      filter: blur(4px);
-      transition: filter 0.3s ease;
-    }
-    .stealth:hover .details {
-      filter: blur(0);
-    }
-
-    .about {
-      text-align: center;
-      max-width: 70ch;
-    }
-
-    /* Contact */
-    form {
-      display: grid;
-      gap: 1rem;
-      max-width: 600px;
-      margin: auto;
-    }
-    input, textarea, select {
-      padding: 0.75rem 1rem;
-      border: 1px solid var(--sand);
-      border-radius: 4px;
-      font-size: 1rem;
-      width: 100%;
-    }
-
-    footer {
-      background: var(--ink);
-      color: var(--white);
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-
-    /* Privacy modal */
-    #privacyModal {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.6);
-      display: none;
       align-items: center;
       justify-content: center;
-      z-index: 1000;
+      height: 100vh;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      color: #333;
+      text-align: center;
     }
-    #privacyModal .box {
-      background: var(--white);
-      padding: 2rem;
-      max-width: 600px;
-      border-radius: 8px;
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    p {
+      font-size: 1.2rem;
     }
   </style>
 </head>
 <body>
-  <heade
-      <input type="checkbox" id="nav-toggle" class="nav-toggle">
-  <label for="nav-toggle" class="hamburger"><span></span></label>
-
-      <nav class="main-nav">
-    <ul>
-      <li><a href="#offerings">Offerings</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#coming">Coming Soon</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-r>
-    <h1>Ostlii – Strategic AI Agency & Ecosystem Operator</h1>
-    <p>Building ethical, local‑first AI infrastructure while empowering founders, creators, and investors to thrive together.</p>
-    <div class="cta-group">
-      <a href="#offerings" class="btn btn-primary">Explore What We Build</a>
-      <a href="#contact" class="btn btn-outline">Join the Ostlii Ecosystem</a>
-    </div>
-  </header>
-
-  <!-- Offerings -->
-  <section id="offerings">
-    <h2>Key Offerings</h2>
-    <div class="grid grid-3">
-      <div class="card">
-        <h3>Custom AI Agents</h3>
-        <p>Automate content, ops, sales, onboarding &amp; prospecting with human‑first agentic workflows.</p>
-      </div>
-      <div class="card">
-        <h3>Startup Acquisition &amp; Ops</h3>
-        <p>Contract‑based acquisition and operational support for promising, impact‑driven startups.</p>
-      </div>
-      <div class="card">
-        <h3>Investor &amp; Ecosystem Matchmaking</h3>
-        <p>Connecting founders, funds, and functional experts for capital and collaboration.</p>
-      </div>
-      <div class="card stealth">
-        <h3>Ostlii Markets <small>(Private Preview)</small></h3>
-        <p class="details">Experimental AI‑driven negotiation &amp; trading platform for rapid, ethical deal‑making.</p>
-      </div>
-      <div class="card">
-        <h3>AI Print &amp; Design Lab</h3>
-        <p>3PL‑integrated studio: upload → AI‑enhanced branding → auto‑order from local or national vendors.</p>
-      </div>
-      <div class="card stealth">
-        <h3>Proximity Networking Platform</h3>
-        <p class="details">Location‑based discovery + community infrastructure supporting local businesses &amp; events.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- About & Values -->
-  <section id="about">
-    <h2>About Us &amp; Our Values</h2>
-    <p class="about">We’re builders, operators, and dreamers who believe AI should augment people—not replace them. Our work is guided by agile/scrum principles, data ownership, and a commitment to privacy. We design real‑world tools that respect human agency and local context.</p>
-  </section>
-
-  <!-- Coming Soon -->
-  <section id="coming">
-    <h2>Coming Soon</h2>
-    <div class="grid grid-2">
-      <div class="card stealth">
-        <h3>Data Coin</h3>
-        <p class="details">Blockchain‑based token empowering users to own &amp; monetize their data across the Ostlii mesh.</p>
-      </div>
-      <div class="card">
-        <h3>Ostlii Education</h3>
-        <p>Powered by Tawny – Agile/Scrum &amp; AI certification tracks for the next generation of builders.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact">
-    <h2>Stay in the Loop</h2>
-    <form action="https://formsubmit.co/evanpaulnavarro@outlook.com" method="POST">
-      <input type="hidden" name="_subject" value="New Ostlii Inquiry" />
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <select name="type" required>
-        <option value="" disabled selected>Select Inquiry Type</option>
-        <option>General Inquiry</option>
-        <option>Submit a Startup</option>
-        <option>Vendor / Investor Interest</option>
-      </select>
-      <textarea name="message" rows="4" placeholder="Tell us more..." required></textarea>
-      <button class="btn btn-primary" type="submit">Send</button>
-    </form>
-    <p style="margin-top:1rem;font-size:0.9rem;text-align:center;">We review every request before confirming meetings to ensure alignment.</p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Ostlii. All rights reserved.</p>
-    <a href="#" onclick="document.getElementById('privacyModal').style.display='flex';return false;" style="color:var(--gold);text-decoration:none;">How We Handle Your Data</a> &nbsp;|&nbsp; <a href="terms.html" style="color:var(--green);text-decoration:none;">Terms of Service</a>
-  </footer>
-
-  <!-- Privacy Modal -->
-  <div id="privacyModal">
-    <div class="box">
-      <h3>How We Handle Your Data</h3>
-      <p>We never resell personal data. No cookies or scripts run without your opt‑in. Any AI‑generated content belongs to you unless co‑created under a paid collaboration.</p>
-      <button class="btn btn-outline" onclick="document.getElementById('privacyModal').style.display='none';">Close</button>
-    </div>
+  <div>
+    <h1>We’ll be back soon!</h1>
+    <p>Ostlii is currently undergoing maintenance.<br>Please check back later.</p>
   </div>
-
-  <script>
-    // Close modal on escape
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Escape') {
-        document.getElementById('privacyModal').style.display = 'none';
-      }
-    });
-  </script>
 </body>
 </html>
