--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 </head>
 <body>
   <div>
-    <h1>We’ll be back soon!</h1>
+
+        <img src="under%20construction.png" alt="Under Construction" style="max-width:300px;width:80%;margin-bottom:1rem;">
+<h1>We’ll be back soon!</h1>
     <p>Ostlii is currently undergoing maintenance.<br>Please check back later.</p>
   </div>
 </body>
