--- a/landing.html
+++ b/landing.html
@@ -31,7 +31,7 @@
 
     a {
       color: var(--ink);
-      text-decorati
+      text-decorattext-decoration: none;
         on: none;
       font-weight: 600;
     }
@@ -258,7 +258,7 @@ textarea:focus {
   </nav>
 
   <section class="hero">
-    <hNo ads. No tracking.<br>Just people, presence, and purpose.
+<h1>No ads. No tracking.<br>Just people, presence, and purpose.</h1>
     <p>Ostlii is the human‑first discovery network that lets you find and share real‑world experiences without sacrificing your privacy or your data.</p>
     <a href="#contact" class="btn-primary">Join the Waitlist</a>
   </section>
