--- a/llm-guide.html
+++ b/llm-guide.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="The complete guide to Large Language Models, AI SaaS tools, and infrastructure pricing by Ostlii.">
+    <link rel="canonical" href="https://ostlii.com/llm-guide.html">
+
     <title>The Complete Guide to LLMs, AI SaaS & Infrastructure | Ostlii</title>
     <style>
         * {
