--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@ textarea:focus {
       <ul class="nav-links">
         <li><a href="#features">Features</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#contact">Waitlist</a></li>
+        <li><a href="#contact">Waitlist</a></
+                                                             <li><a href="/llm-guide.html">LLM Guide</a></li>li>
       </ul>
     </div>
   </nav>
