Add SEO meta tags & CSP to index.html
Adds meta description, canonical link to https://ostlii.com/, and Content-Security-Policy (upgrade-insecure-requests) for better SEO and security.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="w
+    <meta name="description" content="Ostlii connects you to meaningful real‑world networking events using AI technology, prioritizing privacy and community engagement." />
+<link rel="canonical" href="https://ostlii.com/" />
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+idth=device-width, initial-scale=1.0" />
   <title>Ostlii – Human‑First Real‑World Discovery</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
